<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:background="@color/colorWhite">

    <!-- שכבת תמיכה לתמונת הרקע -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <!-- תמונת הרקע -->
        <ImageView
            android:layout_width="1000dp"
            android:layout_height="1000dp"
            android:layout_gravity="center"
            android:src="@drawable/background6" />
    </LinearLayout>


    <!-- השכבה שמכילה הכל -->
    <LinearLayout
        android:id="@+id/all_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:id="@+id/scrollLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!--  שכבת הלוגו -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <TextView
                        android:id="@+id/txtType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@color/colorWhite3"
                        android:gravity="center"
                        android:text="@string/info"
                        android:textColor="@color/line2Color"
                        android:textSize="20sp"
                        android:textAllCaps="false"
                        android:textStyle="bold" />

                </LinearLayout>  <!-- סגירת שכבת הלוגו -->


                <!--  שכבת מחלקות - טבלאית -->

                <LinearLayout
                    android:id="@+id/periodicalCarLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/treatment_shape"
                    android:gravity="center"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:paddingHorizontal="15dp"
                        android:layout_marginTop="15dp"
                        android:textColor="@color/line2Color"
                        android:textAllCaps="false"
                        android:text="@string/infoStart"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:textStyle="bold"
                        android:textSize="12sp"
                        android:paddingHorizontal="15dp"
                        android:layout_marginTop="15dp"
                        android:textColor="@color/line2Color"
                        android:textAllCaps="false"
                        android:text="@string/page1"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:textSize="12sp"
                        android:paddingHorizontal="15dp"
                        android:textColor="@color/line2Color"
                        android:textAllCaps="false"
                        android:text="@string/info1"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:textStyle="bold"
                        android:textSize="12sp"
                        android:paddingHorizontal="15dp"
                        android:layout_marginTop="15dp"
                        android:textColor="@color/line2Color"
                        android:textAllCaps="false"
                        android:text="@string/page2"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:textSize="12sp"
                        android:paddingHorizontal="15dp"
                        android:textColor="@color/line2Color"
                        android:textAllCaps="false"
                        android:text="@string/info2"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:textStyle="bold"
                        android:textSize="12sp"
                        android:paddingHorizontal="15dp"
                        android:layout_marginTop="15dp"
                        android:textColor="@color/line2Color"
                        android:textAllCaps="false"
                        android:text="@string/page3"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:textSize="12sp"
                        android:paddingHorizontal="15dp"
                        android:textColor="@color/line2Color"
                        android:textAllCaps="false"
                        android:text="@string/info3"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginTop="15dp"
                        android:gravity="start"
                        android:paddingHorizontal="15dp"
                        android:text="@string/page4"
                        android:textAllCaps="false"
                        android:textColor="@color/line2Color"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:textSize="12sp"
                        android:paddingHorizontal="15dp"
                        android:textColor="@color/line2Color"
                        android:textAllCaps="false"
                        android:text="@string/info4"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="15dp"
                        android:gravity="end"
                        android:paddingHorizontal="15dp"
                        android:text="@string/enjoy"
                        android:textAllCaps="false"
                        android:textColor="@color/line2Color"
                        android:textSize="15sp"
                        android:layout_marginBottom="20dp"
                        android:textStyle="bold" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp"
                    >

                    <Button
                        android:id="@+id/prevBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/shape"
                        android:gravity="center"
                        android:textAllCaps="false"
                        android:layout_marginHorizontal="30dp"
                        android:text="@string/previous" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"/>
                </LinearLayout>




            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>